# genesis

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  check_templates.py  go.mod  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py  setup_venv.sh  update_templates.py
cursor/: .rules
docs/: ARCHITECTURE.md  COMPARISON.md  IMPLEMENTATION-PLAN.md
docs/rules/: rules.md
examples/task-manager/: .cursorrules.json  .env.local  .gitignore  DEV-GUIDE.md  README.md  genesis.json  package.json  pnpm-lock.yaml  tailwind.config.js
examples/task-manager/.cursor/: rules.MD
examples/task-manager/docs/rules/: COMPONENTS.md  DEV-GUIDE.md  MIGRATION-REACT19.md
examples/task-manager/src/app/: layout.tsx  page.tsx
examples/task-manager/src/components/: Navbar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  TaskListWrapper.tsx  UserCard.tsx  UserForm.tsx  UserList.tsx  UserListWrapper.tsx
examples/task-manager/src/services/: taskService.ts  taskSupabaseService.ts  (+2 more)
genesis/: CHANGELOG.md  README.md  analyzer.py  cli.py  genesis.py  setup.py
genesis/generator/: app.py  entity.py
genesis/templates/nextjs/: .cursorrules  .cursorrules.json.template  .eslintrc.json.template  .gitignore.template  COMPONENTS.md.template  README.md  README.md.template  dev-guide.md.template  next.config.mjs  package.json  package.json.template  postcss.config.mjs  tailwind.config.js  tailwind.config.js.template
internal/generator/: generator.go
internal/templates/: development.go  readme.go
src/: development-generator.js  index.js  readme-generator.js
(+60 files in other folders)
